WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
224800
REGRESSION (
r275523
): [iOS] Opaque system fill colors are incorrect in dark mode
https://bugs.webkit.org/show_bug.cgi?id=224800
Summary
REGRESSION (r275523): [iOS] Opaque system fill colors are incorrect in dark mode
Aditya Keerthi
Reported
2021-04-19 20:43:15 PDT
The colors are much lighter than expected.
Attachments
Patch
(8.63 KB, patch)
2021-04-19 20:55 PDT
,
Aditya Keerthi
darin
: review+
Details
Formatted Diff
Diff
Patch for landing
(8.53 KB, patch)
2021-04-20 06:26 PDT
,
Aditya Keerthi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-04-19 20:43:46 PDT
<
rdar://problem/76878335
>
Aditya Keerthi
Comment 2
2021-04-19 20:55:32 PDT
Created
attachment 426516
[details]
Patch
Darin Adler
Comment 3
2021-04-19 21:35:44 PDT
Comment on
attachment 426516
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=426516&action=review
> Source/WebCore/rendering/RenderThemeIOS.mm:1343 > + if (useDarkAppearance) > + return blendSourceOver(Color::black, systemColor); > + else > + return blendSourceOver(Color::white, systemColor);
This is one of those cases where ?: looks better: return blendSourceOver(useDarkAppearance ? Color::black : Color::white, systemColor);
Aditya Keerthi
Comment 4
2021-04-20 06:26:44 PDT
Created
attachment 426542
[details]
Patch for landing
Aditya Keerthi
Comment 5
2021-04-20 06:28:25 PDT
Thanks for the review!
EWS
Comment 6
2021-04-20 09:16:52 PDT
Committed
r276307
(
236789@main
): <
https://commits.webkit.org/236789@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 426542
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug