REGRESSION (r275523): [iOS] Opaque system fill colors are incorrect in dark mode https://bugs.webkit.org/show_bug.cgi?id=224800 <rdar://problem/76878335>

Reviewed by Darin Adler.

Source/WebCore:

r275523 updated form control backgrounds to use opaque variants of
system colors. This change was implemented by blending the system
colors over a white background. However, in dark mode, the colors
should be blended over a black background, to retain a dark appearance.

Updated an existing test to validate the colors in light and dark mode.

* rendering/RenderThemeIOS.mm:
(WebCore::systemColorFromCSSValueSystemColorInformation):

Added a useDarkAppearance parameter, so that the system color can be
blended over black when necessary.

(WebCore::systemColorFromCSSValueID):
(WebCore::RenderThemeIOS::cssValueToSystemColorMap const):

LayoutTests:

* fast/css/ios/system-color-for-css-value-expected.txt:
* fast/css/ios/system-color-for-css-value.html:


Canonical link: https://commits.webkit.org/236789@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276307 268f45cc-cd09-0410-ab3c-d52691b4dbfc